@@ -1,17 +1,15 @@
-// SavingGoalService.java
 package com.example.ismoney.service;
 
 import com.example.ismoney.dao.SavingGoalDAO;
 import com.example.ismoney.model.SavingGoal;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.SQLException;
 import java.time.LocalDate;
-import java.util.List;
-import java.math.BigDecimal;
-import java.math.RoundingMode;
-import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class SavingGoalService {
     private final SavingGoalDAO savingGoalDAO;
@@ -20,44 +18,59 @@ public class SavingGoalService {
         this.savingGoalDAO = new SavingGoalDAO();
     }
 
-    public void createSavingGoal(SavingGoal savingGoal) throws SQLException {
+    // CREATE - Membuat goal baru untuk user tertentu
+    public void createSavingGoal(SavingGoal savingGoal, Integer userId) throws SQLException {
+        savingGoal.setUserId(userId);
         validateSavingGoal(savingGoal);
         savingGoalDAO.addSavingGoal(savingGoal);
     }
 
-    public List<SavingGoal> getAllSavingGoals() throws SQLException {
-        return savingGoalDAO.getAllSavingGoals();
+    // READ - Mengambil semua goal berdasarkan user
+    public List<SavingGoal> getSavingGoalsByUserId(Integer userId) throws SQLException {
+        return savingGoalDAO.getSavingGoalsByUserId(userId);
     }
 
-    public List<SavingGoal> getActiveSavingGoals() throws SQLException {
-        return savingGoalDAO.getActiveSavingGoals();
+    // READ - Mengambil goal aktif berdasarkan user
+    public List<SavingGoal> getActiveSavingGoalsByUserId(Integer userId) throws SQLException {
+        return savingGoalDAO.getActiveSavingGoalsByUserId(userId);
     }
 
-    public SavingGoal getSavingGoalById(int id) throws SQLException {
-        return savingGoalDAO.getSavingGoalById(id);
+    // READ - Mengambil goal berdasarkan ID dan user
+    public SavingGoal getSavingGoalById(int goalId, Integer userId) throws SQLException {
+        return savingGoalDAO.getSavingGoalById(goalId, userId);
     }
 
-    public void updateSavingGoal(SavingGoal savingGoal) throws SQLException {
+    // READ - Mengambil recent updated goals berdasarkan user
+    public List<SavingGoal> getRecentUpdatedGoalsByUserId(Integer userId, int limit) throws SQLException {
+        return savingGoalDAO.getRecentUpdatedGoalsByUserId(userId, limit);
+    }
+
+    // UPDATE - Memperbarui goal
+    public void updateSavingGoal(SavingGoal savingGoal, Integer userId) throws SQLException {
+        savingGoal.setUserId(userId);
         validateSavingGoal(savingGoal);
         savingGoalDAO.updateSavingGoal(savingGoal);
     }
 
-    public void addToSavingGoal(int goalId, double amount) throws SQLException {
+    // UPDATE - Menambah tabungan ke goal
+    public void addToSavingGoal(int goalId, double amount, Integer userId) throws SQLException {
         if (amount <= 0) {
             throw new IllegalArgumentException("Amount must be positive");
         }
-        savingGoalDAO.addSavingToGoal(goalId, BigDecimal.valueOf(amount));
+        savingGoalDAO.addSavingToGoal(goalId, BigDecimal.valueOf(amount), userId);
     }
 
-    public void deleteSavingGoal(int id) throws SQLException {
-        savingGoalDAO.deleteSavingGoal(id);
+    // DELETE - Menghapus goal
+    public void deleteSavingGoal(int goalId, Integer userId) throws SQLException {
+        savingGoalDAO.deleteSavingGoal(goalId, userId);
     }
 
-    public void completeSavingGoal(int goalId) throws SQLException {
-        savingGoalDAO.updateGoalStatusBasedOnProgress(goalId, "COMPLETED");
+    // UPDATE - Menyelesaikan goal
+    public void completeSavingGoal(int goalId, Integer userId) throws SQLException {
+        savingGoalDAO.updateGoalStatusBasedOnProgress(goalId, "COMPLETED", userId);
     }
 
-    // Calculate how much needs to be saved per day to reach the goal
+    // CALCULATION - Menghitung tabungan harian yang diperlukan
     public BigDecimal calculateDailySavingRequired(SavingGoal goal) {
         if (goal.getTargetDate().isBefore(LocalDate.now())) {
             return BigDecimal.ZERO; // Goal date has passed
@@ -71,7 +84,7 @@ public class SavingGoalService {
         return goal.getRemainingAmount().divide(BigDecimal.valueOf(daysRemaining), RoundingMode.HALF_UP);
     }
 
-    // Calculate how much needs to be saved per month to reach the goal
+    // CALCULATION - Menghitung tabungan bulanan yang diperlukan
     public BigDecimal calculateMonthlySavingRequired(SavingGoal goal) {
         if (goal.getTargetDate().isBefore(LocalDate.now())) {
             return BigDecimal.ZERO; // Goal date has passed
@@ -85,30 +98,34 @@ public class SavingGoalService {
         return goal.getRemainingAmount().divide(BigDecimal.valueOf(monthsRemaining), RoundingMode.HALF_UP);
     }
 
-    // Get goals that are due soon (within specified days)
-    public List<SavingGoal> getGoalsDueSoon(int days) throws SQLException {
-        List<SavingGoal> allGoals = getActiveSavingGoals();
+    // FILTER - Mengambil goal yang akan jatuh tempo dalam beberapa hari
+    public List<SavingGoal> getGoalsDueSoon(Integer userId, int days) throws SQLException {
+        List<SavingGoal> allGoals = getActiveSavingGoalsByUserId(userId);
         LocalDate cutoffDate = LocalDate.now().plusDays(days);
 
         return allGoals.stream()
                 .filter(goal -> goal.getTargetDate().isBefore(cutoffDate) || goal.getTargetDate().isEqual(cutoffDate))
                 .filter(goal -> !goal.isCompleted())
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // Get goals that are overdue
-    public List<SavingGoal> getOverdueGoals() throws SQLException {
-        List<SavingGoal> allGoals = getActiveSavingGoals();
+    // FILTER - Mengambil goal yang sudah terlambat
+    public List<SavingGoal> getOverdueGoals(Integer userId) throws SQLException {
+        List<SavingGoal> allGoals = getActiveSavingGoalsByUserId(userId);
         LocalDate today = LocalDate.now();
 
         return allGoals.stream()
                 .filter(goal -> goal.getTargetDate().isBefore(today))
                 .filter(goal -> !goal.isCompleted())
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // Validate goal input before insert/update
+    // VALIDATION - Validasi input goal
     private void validateSavingGoal(SavingGoal savingGoal) {
+        if (savingGoal.getUserId() == null) {
+            throw new IllegalArgumentException("User ID cannot be null");
+        }
+
         if (savingGoal.getGoalName() == null || savingGoal.getGoalName().trim().isEmpty()) {
             throw new IllegalArgumentException("Saving goal name cannot be empty");
         }
@@ -124,5 +141,29 @@ public class SavingGoalService {
         if (savingGoal.getTargetDate() == null || savingGoal.getTargetDate().isBefore(LocalDate.now())) {
             throw new IllegalArgumentException("Target date must be today or in the future");
         }
+    }
+
+    @Deprecated
+    public void createSavingGoal(SavingGoal savingGoal) throws SQLException {
+        System.err.println("Warning: createSavingGoal(SavingGoal) is deprecated. Use createSavingGoal(SavingGoal, Integer) instead.");
+        throw new IllegalArgumentException("User ID is required. Use createSavingGoal(SavingGoal, Integer userId) instead.");
+    }
+
+    @Deprecated
+    public List<SavingGoal> getAllSavingGoals() throws SQLException {
+        System.err.println("Warning: getAllSavingGoals() is deprecated. Use getSavingGoalsByUserId(Integer) instead.");
+        throw new IllegalArgumentException("User ID is required. Use getSavingGoalsByUserId(Integer userId) instead.");
+    }
+
+    @Deprecated
+    public List<SavingGoal> getActiveSavingGoals() throws SQLException {
+        System.err.println("Warning: getActiveSavingGoals() is deprecated. Use getActiveSavingGoalsByUserId(Integer) instead.");
+        throw new IllegalArgumentException("User ID is required. Use getActiveSavingGoalsByUserId(Integer userId) instead.");
+    }
+
+    @Deprecated
+    public SavingGoal getSavingGoalById(int id) throws SQLException {
+        System.err.println("Warning: getSavingGoalById(int) is deprecated. Use getSavingGoalById(int, Integer) instead.");
+        throw new IllegalArgumentException("User ID is required. Use getSavingGoalById(int goalId, Integer userId) instead.");
     }
 }
